==> ghsecuritylab/nucleo_projects/RD64_STM32F1_V01_00/Design_Files/source/retarget.c <==
/** \file retarget.c ******************************************************
*
* Project: MAXREFDES64#
* Filename: retarget.c
* Description:  This file redefines functions used by printf() for outputting characters 
*								and getchar() for inputting characters. 
*								The printf() function ultimately relies on the fputc() function to operate. 
*								The fputc() has been implemented using USART_SendData()
*								Similarly, getchar() relies on the fgetc() function to operate.
*								fgetc() has been implemented using USART_ReceiveData()
*
* Revision History:
*\n 04-05-13 Rev 01.00 MTS Initial release.
*\n 02-27-14 Rev 02.00 MTS Re-release.
*\n
*
* --------------------------------------------------------------------
*
* This code follows the following naming conventions:
*
*\n char							ch_pmod_value
*\n char (array)			s_pmod_string[16]
*\n float							f_pmod_value
*\n int								n_pmod_value
*\n int (array)				an_pmod_value[16]
*\n u16								u_pmod_value
*\n u16 (array)				au_pmod_value[16]
*\n u8								uch_pmod_value
*\n u8 (array)				auch_pmod_buffer[16]
*\n unsigned int			un_pmod_value
*\n int *							pun_pmod_value
*
* ------------------------------------------------------------------------- */
/*
* Copyright (C) 2012 Maxim Integrated Products, Inc., All Rights Reserved.
*
* Permission is hereby granted, free of charge, to any person obtaining a
* copy of this software and associated documentation files (the "Software"),
* to deal in the Software without reps_striction, including without limitation
* the rights to use, copy, modify, merge, publish, dips_stribute, sublicense,
* and/or sell copies of the Software, and to permit persons to whom the
* Software is furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included
* in all copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
* OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
* MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
* IN NO EVENT SHALL MAXIM INTEGRATED PRODUCTS BE LIABLE FOR ANY CLAIM, DAMAGES
* OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
* ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
* OTHER DEALINGS IN THE SOFTWARE.
*
* Except as contained in this notice, the name of Maxim Integrated Products
* shall not be used except as stated in the Maxim Integrated Products
* Branding Policy.
*
* The mere transfer of this software does not imply any licenses
* of trade secrets, proprietary technology, copyrights, patents,
* trademarks, maskwork rights, or any other form of intellectual
* property whatsoever. Maxim Integrated Products retains all ownership rights.
*
***************************************************************************/

#include <stdio.h>
#include <rt_misc.h>
#include "stm32f10x.h"
#include "stm32f10x_usart.h"

//#pragma import(__use_no_semihosting_swi)


extern int sendchar (int c);
extern int getkey (void);


/*struct __FILE { int handle; };
FILE __stdout;
FILE __stdin;*/


int fputc(int c, FILE *f) {
	uint16_t u_character;
	u_character=c;
	USART_SendData(USART1,u_character);
	while (USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET);
  return c;
}

int fgetc(FILE *f) {
	uint16_t u_character;
	while(USART_GetFlagStatus(USART1,USART_FLAG_RXNE)==RESET);
	u_character=USART_ReceiveData(USART1);
	
	USART_SendData(USART3,u_character);
	while (USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET);
  return (u_character);
}


int ferror(FILE *f) {
  /* Your implementation of ferror */
  return EOF;
}


void _ttywrch(int c) {
  uint16_t u_character;
	u_character=c;
  USART_SendData(USART1,u_character);
}


void _sys_exit(int return_code) {
label: goto label; /* endless loop */
}
